--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,41 @@
-<h2>Show : <%= @list.name %></h2>
+<div class="section-header mb-5 position-relative" style="background-image: url(<%= asset_path('bg-list.jpg') %>);">
+  <h1 class="text-light"><%= @list.name %></h1>
+  <div class="btn btn-info text-light position-absolute top-20 end-20"><%= @list.movies.count %> movies</div>
+</div>
+
+<div class="section-movies mb-5">
+  <div class="container">
+    <%# button Add a movie %>
+    <div class="d-flex justify-content-end mb-3">
+      <%= link_to "Add a movie", new_list_bookmark_path(@list), class:"btn btn-success text-light"  %>
+    </div>
+
+    <%# Cards Movie / Bookmark %>
+    <div class="row gap-4 justify-content-center">
+      <% @list.bookmarks.each do |bookmark| %>
+        <div class="card-trip col-5">
+          <%# movie image %>
+          <%= image_tag bookmark.movie.poster_url, alt: "poster image" %>
+          <div class="card-trip-infos">
+            <%# movie infos %>
+            <div>
+              <h2><%= bookmark.movie.title %> • <span class="text-secondary"><%= bookmark.movie.rating %> <i class="fa-solid fa-star" style="color: #ffd43b;"></i></span> </h2> 
+            </div>
+            <p class="mb-3"><%= bookmark.movie.overview %></p>
+            <%# bookmark comment %>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="d-flex gap-1">
+                <i class="fa-solid fa-quote-left" style="color: #0d0d0d;"></i>
+                <p><%= bookmark.comment %></p>
+              </div>
+              <%# delete bookmark == delete card %>
+              <p>
+                <%= link_to 'delete', bookmark_path(bookmark), method: :delete, data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class:"text-danger text-decoration-none" %>
+              </p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
