--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,13 +7,16 @@
   <div class="container">
     <%# button Add a movie %>
     <div class="d-flex justify-content-end mb-3">
-      <%= link_to "Add a movie", new_list_bookmark_path(@list), class:"btn btn-success text-light"  %>
+      <button type="button" class="btn btn-success text-light" data-bs-toggle="modal" data-bs-target="#new_movie_modal">
+          Add a movie
+      </button>
     </div>
 
+
     <%# Cards Movie / Bookmark %>
-    <div class="row gap-4 justify-content-center">
+    <div class="d-flex flex-wrap gap-4">
       <% @list.bookmarks.each do |bookmark| %>
-        <div class="card-trip col-5">
+        <div class="card-trip">
           <%# movie image %>
           <%= image_tag bookmark.movie.poster_url, alt: "poster image" %>
           <div class="card-trip-infos">
@@ -38,4 +41,8 @@
       <% end %>
     </div>
   </div>
+  
+  <%# Render Modal %>
+  <%= render "bookmarks/modal", list: @list, bookmark: @bookmark %>
+
 </div>
