new review partials

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -4,6 +4,6 @@
     <%= f.input :comment %>
     <%# <%= f.association :movie %>
     <%= f.input :rating %>
-    <%= f.submit class: 'btn btn-primary' %>
+    <%= f.submit class: 'btn btn-success text-light' %>
   <% end %>
 </div>
