--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -48,22 +48,24 @@
 
 <div class="section-reviews">
   <div class="container border-top py-5">
-    <div> <%# Reviews Index %>
-       <h2>Reviews</h2>
-        <% @list.reviews.each do |review| %>
-          <div class="border-bottom">
-            <div class="mb-1">
-              <% review.rating.times do %>
-                <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
-              <% end %>
+    <div class="row">
+      <div class="col-6"> <%# Reviews Index %>
+        <h2>Reviews</h2>
+          <% @list.reviews.each do |review| %>
+            <div class="border-bottom">
+              <div class="mb-1">
+                <% review.rating.times do %>
+                  <i class="fa-solid fa-star" style="color: #ffd43b;"></i>
+                <% end %>
+              </div>
+              <p><%= review.comment %></p>
             </div>
-            <p><%= review.comment %></p>
-          </div>
-        <% end %>
-    </div>
+          <% end %>
+      </div>
 
-    <div> <%# New review form %>
-      <%= render "reviews/form", list: @list, review: @review %>
+      <div class="col-6"> <%# New review form %>
+        <%= render "reviews/form", list: @list, review: @review %>
+      </div>
     </div>
   </div>
 </div>
